--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,23 +28,30 @@
   font-family: "Montserrat", sans-serif;
 }
 
-html {
+:root {
   font-size: 62.5%;
+  --primary-green: #27ae60;
+  --primary-yellow: #fdcb6e;
+  --primary-red: #e74c3c;
+  --primary-grey: #a4a4a4;
+  --text-dark: #000;
+  --text-light: #f5f5f5;
 }
 
 @media only screen and (min-width: 600px) {
-  html {
+  :root {
     font-size: 75%;
   }
 }
 
 @media only screen and (min-width: 768px) {
-  html {
+  :root {
     font-size: 87.5%;
   }
 }
+
 @media only screen and (min-width: 992px) {
-  html {
+  :root {
     font-size: 100%;
   }
 }
