--- a/client/src/components/layouts/navbar/style.css
+++ b/client/src/components/layouts/navbar/style.css
@@ -111,10 +111,11 @@
   }
 
   .nav__background {
+    z-index: 999;
     width: 3.5rem;
     height: 3.5rem;
-    position: fixed;
-    background: rgb(207, 207, 207);
+    position: absolute;
+    background: rgba(185, 185, 185, 0.98);
     right: 5%;
     border-radius: 50%;
     display: block;
@@ -139,36 +140,22 @@
   }
 
   .nav__item:nth-child(1) {
-    animation: 0.5s ease-in 0.1s slideFromBottom backwards;
+    animation: 0.5s ease-in-out 0.1s slideFromBottom backwards;
   }
 
   .nav__item:nth-child(2) {
-    animation: 0.5s ease-in 0.2s slideFromBottom backwards;
+    animation: 0.5s ease-in-out 0.2s slideFromBottom backwards;
   }
 
   .nav__item:nth-child(3) {
-    animation: 0.5s ease-in 0.3s slideFromBottom backwards;
+    animation: 0.5s ease-in-out 0.3s slideFromBottom backwards;
   }
 
   .nav__item:nth-child(4) {
-    animation: 0.5s ease-in 0.4s slideFromBottom backwards;
+    animation: 0.5s ease-in-out 0.4s slideFromBottom backwards;
   }
 
   .nav__item:nth-child(5) {
-    animation: 0.5s ease-in 0.5s slideFromBottom backwards;
-  }
-}
-
-@keyframes slideFromBottom {
-  0% {
-    position: relative;
-    opacity: 0;
-    top: 20px;
-  }
-
-  100% {
-    opacity: 1;
-    position: relative;
-    top: 0;
+    animation: 0.5s ease-in-out 0.5s slideFromBottom backwards;
   }
 }
