--- a/client/src/components/layouts/footer/style.css
+++ b/client/src/components/layouts/footer/style.css
@@ -10,7 +10,7 @@
 }
 
 .social__media-container {
-  width: 200px;
+  width: 13rem;
   margin: 2rem auto 0 auto;
   display: flex;
   justify-content: space-between;
@@ -23,5 +23,3 @@
   background-size: cover;
   cursor: pointer;
 }
-
-
