--- a/client/src/components/hocs/style.css
+++ b/client/src/components/hocs/style.css
@@ -6,7 +6,7 @@
   
   .signUpCard {
     width: 80%;
-    height: 80vh;
+    height: 85vh;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -21,13 +21,14 @@
     border-radius: 2rem 0 0 2rem;
     width: 40%;
     height: 100%;
-    background-image: url("https://storage.googleapis.com/download/storage/v1/b/outfit-7e104.appspot.com/o/clothes.jpg?generation=1599762249161104&alt=media");
+    background-image: url("https://storage.googleapis.com/download/storage/v1/b/outfit-7e104.appspot.com/o/clothes.jpg?generation=1599902336870301&alt=media");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
   
   .col-right {
+    position: relative;
     width: 60%;
     height: 100%;
     border-radius: 0 2rem 2rem 0;
