Modified register component

--- a/client/src/pages/register/style.css
+++ b/client/src/pages/register/style.css
@@ -19,6 +19,10 @@
   margin-top: 1rem;
 }
 
+.btn__register:disabled {
+  filter: brightness(70%);
+}
+
 .profilepic__container {
     display: flex;
     justify-content: flex-start;
