--- a/client/src/components/layouts/navbar/style.css
+++ b/client/src/components/layouts/navbar/style.css
@@ -41,8 +41,27 @@
   background: var(--primary-green);
 }
 
-.nav__item:hover > ul {
-  /* display: block; */
+.nav__profile-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 2rem
+}
+
+.nav__profile-img {
+  margin-top: -0.4rem;
+  width: 2rem;
+  height: 2rem;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+}
+
+.nav__profile-name {
+  font-weight: 600;
+  margin-top: -0.4rem;
+  margin-left: 5px;
+  text-transform: capitalize;
 }
 
 .arrow__bottom {
@@ -139,6 +158,20 @@
     color: var(--text-dark);
   }
 
+  .nav__profile-info {
+    margin: 2rem 0;
+  }
+  
+  .nav__profile-img {
+    margin-right: 0.5rem;
+    width: 3rem;
+    height: 3rem;
+  }
+  
+  .nav__profile-name {
+    font-size: 2rem;
+  }
+
   .nav__item:nth-child(1) {
     animation: 0.5s ease-in-out 0.1s slideFromBottom backwards;
   }
@@ -157,5 +190,9 @@
 
   .nav__item:nth-child(5) {
     animation: 0.5s ease-in-out 0.5s slideFromBottom backwards;
+  }
+
+  .nav__profile-info {
+    animation: 0.5s ease-in-out 0.6s slideFromBottom backwards;
   }
 }
